@@ -1,8 +1,9 @@
 CORE
 sequence_first_match1.sv
 --bound 5
-^\[.*\] first_match\(main\.x == 0\): FAILURE: property not supported by BMC engine$
-^EXIT=10$
+^\[.*\] first_match\(main\.x == 0\): PROVED up to bound 5$
+^\[.*\] first_match\(main\.x == 0, main\.x\+\+\): PROVED up to bound 5$
+^EXIT=0$
 ^SIGNAL=0$
 --
 ^warning: ignoring
