@@ -17,6 +17,7 @@ class sva_case_exprt;
 class sva_if_exprt;
 class sva_ranged_predicate_exprt;
 class sva_sequence_consecutive_repetition_exprt;
+class sva_sequence_first_match_exprt;
 
 // Precedences (higher means binds more strongly).
 // Follows Table 11-2 in IEEE 1800-2017.
@@ -159,6 +160,9 @@ protected:
 
   resultt
   convert_sva_sequence_concatenation(const binary_exprt &, verilog_precedencet);
+
+  resultt
+  convert_sva_sequence_first_match(const sva_sequence_first_match_exprt &);
 
   resultt convert_function_call(const class function_call_exprt &);
 
